# G10_currency_risk_for_Swiss_residents

./: .gitignore  Dockerfile  LICENSE  Makefile  Project_Docker_Guide.md  README.md  devkua.csv  devkua.json  docker-compose.yml  git status  project_structure.txt  pyproject.toml  requirements.txt  snb_FX.csv
code/: 4.2.0  analyse_Regression_FX_Interest_logreturns.py  analyse_VAR_Monte_Carlo_fx.py  analyse_basic_risk_measures.py  data_collector.py  data_collector_SNB.py  data_collector_interest_rates.py  data_collector_yahoo.py  data_processing.py  data_transformation_yahoo_FX.py  data_transformation_yahoo_FX_2.py  environmental_analyse_script.txt  interactive_app.ipynb  interactive_google_colab_app.ipynb  merge_FX_interest_yearly.py  overnight_rates_plot.html
data/raw/: interest_rates.csv  yahoo_FX.csv
data/transformed/: data_transformation.py  merged_FX_Interest_logreturns.csv
docs/: mkdocs.yml
docs/docs/: index.md
group_project/: __init__.py  dataset.py  features.py  plots.py
group_project/modeling/: predict.py  train.py
notebooks/: interactive_google_colab_app.ipynb
references/: refs.bib
reports/: presentation.tex
reports/figures/: VaR_results.csv  regression_summaries.csv  statistics_results.csv
reports/paper/: refs.bib  text_paper.tex
reports/presentation/: VaR_results-2.csv  presentation.tex  statistics_results_test.csv  test_table.csv
